--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 esp8266/cabane/bme280.py
 esp8266/cabane/tsl2561.py
 esp8266/cabane/am2315.py
-
+esp8266/salon/ads1x15.py
+esp8266/veranda/ads1x15.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
