--- a/python/push-to-db/inifile.sample
+++ b/python/push-to-db/inifile.sample
@@ -10,9 +10,20 @@ mqtt_keepalive=45
 username=pusr103
 password=21052017
 
+[lazywriter]
+; if the MessageQueue is filled with an entry for more x seconds
+; then activate the LazyWriter to write the data. 
+MaxQueueLatency=120
+; if the MessageQueue reach the x entries 
+; then activate the LazyWriter to write the data.
+MaxQueueSize=10
+; seconds to wait after processing the message queue (or skip 
+; message queue processing)
+PauseAfterProcess=2
+
 [connector.sqlitedb]
 class=SqliteConnector
-db=/var/local/pythonic/pyhtonic.db
+db=/var/local/sqlite/pythonic.db
 
 [mqtt.capture.0]
 subscribe=maison/rez/#,maison/exterieur/#,maison/cave/#
@@ -35,7 +46,12 @@ class=MqttTimeserieCapture
 storage=sqlitedb.ts_chauf
 
 [loggers]
-keys=root
+; root - logger de l'application
+; connector - logger des connecteurs DB
+; pmq - process_message_queue() du LazyWriter
+;       Affiche une info très utile sur les messages 
+;       à sauver, par quelle classe et sur quel connecteur
+keys=root,connector,pmq
 
 [handlers]
 keys=console,logfile
@@ -44,8 +60,19 @@ keys=console,logfile
 keys=default
 
 [logger_root]
+; use level=NOTSET pour tous les messages
 level=NOTSET
 handlers=console,logfile
+
+[logger_connector]
+level=ERROR
+handlers=console,logfile
+qualname=connector
+
+[logger_pmq]
+level=ERROR
+handlers=console,logfile
+qualname=pmq
 
 [handler_console]
 class=StreamHandler
